# .github

./: .coverage  PR_GOVERNANCE_AUDIT.md  README.md  ci-review-prompt.md  code-reviewer-prompt.md  cover_error_cmd.py  fix_merge.py  opencode.jsonc  patch_test.diff  plan.md  pr_description.md  pr_description.txt  pyproject.toml  requirements-opencode-review-ci.txt  requirements-strix-ci-hashes.txt  requirements-strix-ci.txt  run_main.py  run_main_error.py
.Jules/: palette.md
.github/workflows/: noema-review.yml  opencode-review.yml  pr-review-autofix.yml  pr-review-fix-scheduler.yml  pr-review-merge-scheduler.yml  scorecard-analysis.yml  secondary-review.yml  strix.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: org-required-workflow-rollout.md
profile/: README.md
scripts/ci/: assert_opencode_reasoning_effort.py  collect_failed_check_evidence.sh  cover_all.sh  cover_main_error.py  dummy.py  dummy_main.py  dummy_main2.py  dummy_prms.py  dummy_test_main.py  emit_opencode_failed_check_fallback_findings.sh  noema_review_gate.py  opencode_review_approve_gate.sh  opencode_review_normalize_output.py  (+21 more)
tests/: test_assert_opencode_reasoning_effort.py  test_noema_review_gate.py  test_opencode_agent_contract.py  test_opencode_review_normalize_output.py  test_opencode_workflow_shell_syntax.py  test_pr_governance_audit_contract.py  test_pr_review_fix_scheduler.py  test_pr_review_fix_scheduler_coverage.py  test_pr_review_merge_scheduler.py  test_render_opencode_prompt_template.py  test_review_execution_contracts.py  test_sandboxed_verify.py  test_sandboxed_web_e2e.py
(+2 files in other folders)
