[tool.coverage.run]
source = ["scripts/ci"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.interrogate]
exclude = ["tests"]
fail-under = 100

[project]
name = "opencode-review-ci"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "interrogate>=1.7.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
