[project]
name = "opencode-review-ci"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "interrogate>=1.7.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["scripts/ci"]
omit = ["tests/*", "scripts/ci/test_*.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.interrogate]
exclude = ["tests"]
fail-under = 100
